--- a/aside.css
+++ b/aside.css
@@ -7,7 +7,7 @@
   color: white;
   background-color: #222d32;
   width: 18.5vw;
-  height: 200vh;
+  height: 500vh;
 }
 .aside-main div div a {
   text-decoration: none;
@@ -119,7 +119,6 @@
 .aside-menu > li:hover {
   background: #1a2226;
 }
-
 .aside-notification {
   display: inline;
   padding: 0.2em 0.6em 0.3em;
@@ -157,15 +156,20 @@
 .navigation-circle3 {
   color: #00c0ef;
 }
+#sub-dashboard{
+  padding-left: 0.5rem;
+}
 
 /* Animation */
-.accordian{
-    position: relative;
-    max-height: 0;
-    overflow: hidden;
-    transition: 5s;
+.accordian {
+  position: relative;
+  overflow: hidden;
+  max-height: 0;
+  transition: 1.5s all ease-in-out;
 }
-.accordian1{
+.accordian1 {
+  position: relative;
+  overflow: hidden;
   max-height: 10rem;
   transition: 2s;
 }
