--- a/form.css
+++ b/form.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 4rem;
 }
 .form-control {
   width: 100%;
@@ -20,6 +21,7 @@
 .help-block {
   color: #737373;
   font-size: 14px;
+  margin: 1rem 0;
 }
 label {
   font-size: 14px;
